tests/paczka1/fuzzy1/73109788.err
Error in line 9: rdeDrYbsQs A439 84,14
Error in line 19: lXm S188 91,3
Error in line 24: c7KB8Sa A819 95,7
Error in line 33: rdeDrYbsQs A819 158,9
